--- a/game/.vscode/settings.json
+++ b/game/.vscode/settings.json
@@ -5,4 +5,7 @@
 	],
 	"Lua.runtime.version": "LuaJIT",
 	"Lua.workspace.checkThirdParty": false,
+	"Lua.diagnostics.disable": [
+		"lowercase-global"
+	],
 }
